<?xml version="1.0"?>
<package>
  <name>robotic_arm_control</name>
  <version>0.1.0</version>
  <description>Package for controlling a robotic arm</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <build_depend>moveit_core</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>moveit_core</run_depend>
  <export>
    <moveit_core_plugin description="MoveIt! plugin for robotic arm control" />
  </export>
</package>